--- a/eda.ipynb
+++ b/eda.ipynb
@@ -13,22 +13,12 @@
     "import seaborn           as sns\n",
     "\n",
     "from utils  import construct_prop_df, construct_graph\n",
-    "from config import PATH, THRESHOLDS, RT_UNDER_COLUMNS"
+    "from config import PATH, THRESHOLDS, RT_UNDER_COLUMNS, EXCLUDE_COLUMNS"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "778c1149-d91d-4f18-8fc6-caa652bd5ec2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EXCLUDE_COLUMNS = ['tweet_id', 'poster', 'tweet', 'label']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "28cb295b-10b4-48d3-86b1-6aa06a4fecdc",
    "metadata": {},
    "outputs": [],
@@ -38,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b51b18f9-9b8f-4730-9594-2d907e8e3f07",
    "metadata": {},
    "outputs": [
@@ -89,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "18f1c2de-12c4-452b-a285-84c1d54ec106",
    "metadata": {},
    "outputs": [
@@ -289,7 +279,7 @@
        "day_1_perc              0.92       0.15      0.97"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6a9a65eb-59d6-4143-810f-1996c88b34da",
    "metadata": {},
    "outputs": [],
@@ -334,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b038bc35-1b53-4607-be09-671e05c58607",
    "metadata": {},
    "outputs": [
@@ -357,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f86645db-059b-4ee0-ae60-b0476b431905",
    "metadata": {},
    "outputs": [
@@ -386,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b9c4fa08-9f82-4e25-bc90-6bffe73ae3b1",
    "metadata": {},
    "outputs": [
@@ -844,7 +834,7 @@
        "day_1_perc               0.18     0.96  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "83932e3d-b20a-47f8-94cf-89d20e366d34",
    "metadata": {},
    "outputs": [],
@@ -878,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a15c38b5-4e97-46fe-b9a7-aa2c24a69673",
    "metadata": {},
    "outputs": [
@@ -899,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "02e96bfb-4da0-4d43-8810-e5cf5ccfdcf3",
    "metadata": {},
    "outputs": [
@@ -931,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d6b1e2bc-b62d-4621-87fb-d712d7b98438",
    "metadata": {},
    "outputs": [
@@ -982,7 +972,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "0046deb7-8d02-43e5-b8d7-e3738f53e969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_true_false = df[(df['label'] == 0) | (df['label'] == 2)]\n",
+    "\n",
+    "df_true_false.to_csv(PATH + 'trueFalse.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "cc388fe3-fef7-4695-ae06-8cfb84b50bee",
    "metadata": {},
    "outputs": [],
