--- a/models.ipynb
+++ b/models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "08bf955a-1075-4c1a-8c4a-a5e4def105cf",
    "metadata": {},
    "outputs": [],
@@ -12,13 +12,14 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model    import LogisticRegression\n",
     "from sklearn.metrics         import accuracy_score, confusion_matrix, classification_report, log_loss\n",
+    "from sklearn.preprocessing   import StandardScaler,  MinMaxScaler\n",
     "\n",
     "from config import EXCLUDE_COLUMNS, PATH"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "21957d7c-37e6-4c74-ae0c-90cee99d8b32",
    "metadata": {},
    "outputs": [],
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "7e44708a-6ee0-4d94-bef4-3e729fb0335a",
    "metadata": {},
    "outputs": [],
@@ -39,17 +40,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "2070c518-75a4-44ee-b6e3-47a4c873a1ca",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Splitting\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
+   "id": "2489d31b-f1fb-4e9f-a0f1-3789bfbd6a5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scaling\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled  = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "6f491203-93da-46de-b6de-174d1de02b1b",
    "metadata": {},
    "outputs": [
@@ -57,51 +73,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5844155844155844\n",
-      "Log Loss: 0.6913764023984809\n",
+      "Accuracy: 0.6060606060606061\n",
+      "Log Loss: 0.7860171836578389\n",
       "Confusion Matrix:\n",
-      " [[69 46]\n",
-      " [50 66]]\n",
+      " [[71 44]\n",
+      " [47 69]]\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.58      0.60      0.59       115\n",
-      "           2       0.59      0.57      0.58       116\n",
+      "           0       0.60      0.62      0.61       115\n",
+      "           1       0.61      0.59      0.60       116\n",
       "\n",
-      "    accuracy                           0.58       231\n",
-      "   macro avg       0.58      0.58      0.58       231\n",
-      "weighted avg       0.58      0.58      0.58       231\n",
+      "    accuracy                           0.61       231\n",
+      "   macro avg       0.61      0.61      0.61       231\n",
+      "weighted avg       0.61      0.61      0.61       231\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\panos\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
      ]
     }
    ],
    "source": [
+    "# Logistic Regression\n",
     "model = LogisticRegression()\n",
-    "model.fit(X_train, y_train)\n",
+    "model.fit(X_train_scaled, y_train)\n",
     "\n",
-    "# Predictions\n",
-    "y_pred = model.predict(X_test)\n",
-    "y_pred_proba = model.predict_proba(X_test)  # Predict probabilities for log_loss calculation\n",
+    "y_pred       = model.predict(X_test_scaled)\n",
+    "y_pred_proba = model.predict_proba(X_test_scaled)\n",
     "\n",
-    "# Evaluation\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "loss = log_loss(y_test, y_pred_proba)\n",
+    "accuracy    = accuracy_score(y_test, y_pred)\n",
+    "loss        = log_loss(y_test, y_pred_proba)\n",
     "conf_matrix = confusion_matrix(y_test, y_pred)\n",
-    "report = classification_report(y_test, y_pred)\n",
+    "report      = classification_report(y_test, y_pred)\n",
     "\n",
     "print(\"Accuracy:\", accuracy)\n",
     "print(\"Log Loss:\", loss)\n",
@@ -111,14 +112,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f88874fe-d8d2-4d82-a3f3-9cb2ec2847dc",
+   "execution_count": 7,
+   "id": "05864efd-a6ed-4701-a5af-e6aa327d3e5b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TO DO\n",
-    "# Text Vectorizer"
+    "# Text Vectorizer\n",
+    "# different scaling per feature"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1242be4-468d-43d9-9954-3d3680465bb0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -137,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
