--- a/models.ipynb
+++ b/models.ipynb
@@ -9,10 +9,11 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model    import LogisticRegression\n",
-    "from sklearn.metrics         import accuracy_score, confusion_matrix, classification_report, log_loss\n",
-    "from sklearn.preprocessing   import StandardScaler,  MinMaxScaler\n",
+    "from sklearn.model_selection         import train_test_split\n",
+    "from sklearn.linear_model            import LogisticRegression\n",
+    "from sklearn.metrics                 import accuracy_score, confusion_matrix, classification_report, log_loss\n",
+    "from sklearn.preprocessing           import StandardScaler,  MinMaxScaler\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "from config import EXCLUDE_COLUMNS, PATH"
    ]
@@ -20,16 +21,26 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "21957d7c-37e6-4c74-ae0c-90cee99d8b32",
+   "id": "3bf9dc0b-60fc-4fa1-8a4a-af122064bbe2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(PATH + 'trueFalse.csv')"
+    "EXCLUDE_COLUMNS.append('tweet')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "21957d7c-37e6-4c74-ae0c-90cee99d8b32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(PATH + 'binary.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "7e44708a-6ee0-4d94-bef4-3e729fb0335a",
    "metadata": {},
    "outputs": [],
@@ -40,18 +51,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2070c518-75a4-44ee-b6e3-47a4c873a1ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Splitting\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.15, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "id": "fe5811ab-2e84-4cb6-9c80-ef6a7f4cdb1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count Matrix\n",
+    "# vectorizer     = CountVectorizer()\n",
+    "# X_train_counts = vectorizer.fit_transform(X_train_scaled)\n",
+    "# X_test_counts  = vectorizer.transform(X_test_scaled)\n",
+    "\n",
+    "# X_train_scaled = pd.DataFrame(X_train_counts.toarray(), columns=vectorizer.get_feature_names_out())\n",
+    "# X_test_scaled  = pd.DataFrame(X_test_counts.toarray(),  columns=vectorizer.get_feature_names_out())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "2489d31b-f1fb-4e9f-a0f1-3789bfbd6a5d",
    "metadata": {},
    "outputs": [],
@@ -65,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "6f491203-93da-46de-b6de-174d1de02b1b",
    "metadata": {},
    "outputs": [
@@ -73,20 +100,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.6060606060606061\n",
-      "Log Loss: 0.7860171836578389\n",
+      "Accuracy: 0.7320872274143302\n",
+      "Log Loss: 0.650738877866185\n",
       "Confusion Matrix:\n",
-      " [[71 44]\n",
-      " [47 69]]\n",
+      " [[111  46]\n",
+      " [ 40 124]]\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.60      0.62      0.61       115\n",
-      "           1       0.61      0.59      0.60       116\n",
+      "           0       0.74      0.71      0.72       157\n",
+      "           1       0.73      0.76      0.74       164\n",
       "\n",
-      "    accuracy                           0.61       231\n",
-      "   macro avg       0.61      0.61      0.61       231\n",
-      "weighted avg       0.61      0.61      0.61       231\n",
+      "    accuracy                           0.73       321\n",
+      "   macro avg       0.73      0.73      0.73       321\n",
+      "weighted avg       0.73      0.73      0.73       321\n",
       "\n"
      ]
     }
@@ -109,26 +136,6 @@
     "print(\"Confusion Matrix:\\n\", conf_matrix)\n",
     "print(\"Classification Report:\\n\", report)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "05864efd-a6ed-4701-a5af-e6aa327d3e5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TO DO\n",
-    "# Text Vectorizer\n",
-    "# different scaling per feature"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1242be4-468d-43d9-9954-3d3680465bb0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
