user based dataset

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "14eba91e-6e9d-4328-90ca-38a7dc508cee",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
     "\n",
     "from prettytable import PrettyTable\n",
     "\n",
-    "from utils  import construct_prop_df, construct_graph\n",
+    "from utils  import construct_prop_df, construct_graph, plot_dist\n",
     "from config import PATH, THRESHOLDS, RT_UNDER_COLUMNS, EXCLUDE_COLUMNS"
    ]
   },
@@ -994,7 +994,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\panos\\AppData\\Local\\Temp\\ipykernel_10964\\3088486671.py:3: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
+      "C:\\Users\\panos\\Documents\\coding\\FakeNewsDetection\\utils.py:64: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
       "  plt.figure(figsize=(10, 6))\n"
      ]
     },
@@ -1221,13 +1221,6 @@
    ],
    "source": [
     "# distributions\n",
-    "def plot_dist(df, column):\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    sns.kdeplot(df[column], fill=True, alpha=0.3)\n",
-    "\n",
-    "    return None\n",
-    "\n",
-    "\n",
     "def plot_dists(df):\n",
     "    df_filtered = df.drop(columns=EXCLUDE_COLUMNS)\n",
     "    \n",
@@ -1490,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "d715a906-3fb4-4969-8c3f-3d1b8e6e319d",
    "metadata": {},
    "outputs": [
@@ -1549,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "104fd953-fba2-420a-abea-05e8101c9bd5",
    "metadata": {},
    "outputs": [],
@@ -1571,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "0046deb7-8d02-43e5-b8d7-e3738f53e969",
    "metadata": {},
    "outputs": [],
@@ -1585,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "0c508aad-38f7-4823-b9a5-9dd1f328ceeb",
    "metadata": {},
    "outputs": [],
@@ -1603,20 +1596,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "cc388fe3-fef7-4695-ae06-8cfb84b50bee",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO\n",
     "# remove outliers\n",
-    "# dist -> scale"
+    "# dist -> scale\n",
+    "# combine with poster info"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4de1897f-ef21-4f0f-ad34-22c51e64c8e6",
+   "id": "748ecaf7-e438-47f3-aa09-4b24e43ffeb7",
    "metadata": {},
    "outputs": [],
    "source": []
