--- a/network/network_analysis.ipynb
+++ b/network/network_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "f111bbcf-1e99-426f-978e-5b477b9a9501",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "60b6a5bf-b9f2-428a-8924-e5751e30c656",
    "metadata": {},
    "outputs": [
@@ -58,21 +58,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------------+------------------------+----------------------+----------------------+------------------------+\n",
-      "|       Metric      |          AVG           |         STD          |         MAX          |          MIN           |\n",
-      "+-------------------+------------------------+----------------------+----------------------+------------------------+\n",
-      "| Degree Centrality | 3.6342750660112847e-06 | 0.000136229872812976 | 0.052210690352827986 | 1.4757119941443749e-06 |\n",
-      "+-------------------+------------------------+----------------------+----------------------+------------------------+\n"
+      "+------------+--------------------+--------------------+-------+-----+\n",
+      "|   Metric   |        AVG         |        STD         |  MAX  | MIN |\n",
+      "+------------+--------------------+--------------------+-------+-----+\n",
+      "| IN Degree  | 1.2313632607284104 | 0.8563588649668502 |   94  |  0  |\n",
+      "| OUT Degree | 1.2313632607284104 | 92.30200836674172  | 35379 |  0  |\n",
+      "+------------+--------------------+--------------------+-------+-----+\n"
      ]
     }
    ],
    "source": [
-    "degree_centrality = list(nx.degree_centrality(G).values())\n",
+    "metrics = {}\n",
+    "metrics['IN Degree']  = list(dict(G.in_degree()).values())\n",
+    "metrics['OUT Degree'] = list(dict(G.out_degree()).values())\n",
     "\n",
     "table = PrettyTable()\n",
     "table.field_names = [\"Metric\", \"AVG\", \"STD\", \"MAX\", \"MIN\"]\n",
     "\n",
-    "table.add_row(['Degree Centrality', np.mean(degree_centrality), np.std(degree_centrality), np.max(degree_centrality), np.min(degree_centrality)])\n",
+    "for m,v in metrics.items():\n",
+    "    table.add_row([m, np.mean(v), np.std(v), np.max(v), np.min(v)])\n",
     "\n",
     "print(table)"
    ]
@@ -107,8 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dd1f0223-087e-47d6-891d-60c741952551",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5efd7795-613d-42fe-9dcd-13b0fcf8ccd4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -130,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
