--- a/network/GAT.ipynb
+++ b/network/GAT.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vpOAKz7sbTYI",
-        "outputId": "bf7cea22-8727-42e3-8527-7b8b8b5a4543"
+        "outputId": "d2894077-ec92-49b0-dfb5-8a544b02abd3"
       },
       "outputs": [
         {
@@ -65,7 +65,8 @@
         "import pandas as pd\n",
         "\n",
         "from torch_geometric.data import Data\n",
-        "from torch_geometric.nn   import GATConv"
+        "from torch_geometric.nn   import GATConv\n",
+        "from tqdm                 import tqdm"
       ],
       "metadata": {
         "id": "3tQw5eRHbYIb"
@@ -86,7 +87,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ewx-H4rXb0aJ",
-        "outputId": "f1fa34b4-aa2b-4075-a20d-c64e8eee1ed3"
+        "outputId": "c49dcc55-57dc-4e61-bb37-5ffcd0ffc6ed"
       },
       "execution_count": 3,
       "outputs": [
@@ -120,7 +121,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rP8UACQutVm_",
-        "outputId": "463cb122-a8f8-4ab1-9bc5-a6836e13d89e"
+        "outputId": "23b07e3f-3efd-47ee-e50f-9b10e54fa42d"
       },
       "execution_count": 4,
       "outputs": [
@@ -189,7 +190,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_9G2kK9PeqhZ",
-        "outputId": "e256cefc-5d66-4dd1-da80-6b35cb12cb71"
+        "outputId": "18f405ab-5d18-43b8-ddb1-f423614ccce1"
       },
       "execution_count": 7,
       "outputs": [
@@ -217,7 +218,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W6r-GR4ie3Me",
-        "outputId": "bb5ac4bf-8c17-403a-9dc7-485079f41216"
+        "outputId": "37cd09f3-f822-4887-a39f-e973634890d8"
       },
       "execution_count": 8,
       "outputs": [
@@ -245,9 +246,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "epK-wXocvqnB",
-        "outputId": "cd9910e1-9e10-429f-e11e-87284e0dabd8"
+        "outputId": "aec9beca-e4d6-4587-d130-6a27bae3b422"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,7 +258,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -272,9 +273,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e2e78b80-88b1-4119-fd02-61c47ee5aaba"
+        "outputId": "15be5e47-420b-4ceb-88fd-13e016c5ff95"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +285,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 10
         }
       ]
     },
@@ -305,7 +306,7 @@
       "metadata": {
         "id": "gKpCeubfe-hg"
       },
-      "execution_count": 19,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -319,9 +320,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5b181c9b-8375-4b60-a7d8-57613aa43448"
+        "outputId": "e50569d3-1db4-4fd8-a79f-6f7ac15fc24f"
       },
-      "execution_count": 20,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -333,7 +334,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 12
         }
       ]
     },
@@ -360,22 +361,22 @@
       "metadata": {
         "id": "1Kf5wWEKDLV3"
       },
-      "execution_count": 24,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "train_model(model, epochs = 10)[1].shape"
+        "attention_weights = train_model(model, epochs = 10)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fUwfo8Kicuoq",
-        "outputId": "fb86f320-8e53-43b5-9186-71ecf599ac2e"
+        "outputId": "f90d1068-657b-467f-c3bf-db630d8117f5"
       },
-      "execution_count": 27,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,7 +384,23 @@
           "text": [
             "Epoch 1, Loss: 0.4484439194202423\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "attention_weights[1].shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "_viHapdgzDZ8",
+        "outputId": "7ebeed69-6f79-44dc-8f1d-a93e36e7668f"
+      },
+      "execution_count": 15,
+      "outputs": [
         {
           "output_type": "execute_result",
           "data": {
@@ -392,7 +409,52 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "attention_scores = attention_weights[1]\n",
+        "\n",
+        "node_importance = torch.zeros(len(nodes))\n",
+        "for i, (src, dst) in tqdm(enumerate(data.edge_index.t()), desc = 'Aggregating Attention'):\n",
+        "    node_importance[src] += attention_scores[i].abs().sum()\n",
+        "    node_importance[dst] += attention_scores[i].abs().sum()\n",
+        "\n",
+        "_, important_node_indices = torch.topk(node_importance, k=10)\n",
+        "\n",
+        "print(f'Most Important Nodes: {important_node_indices}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 349
+        },
+        "id": "zPMUaa5KzKH9",
+        "outputId": "fbfd5907-a723-4c2c-fae9-d3a6a996a025"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Aggregating Attention: 749847it [01:44, 7172.68it/s]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-e0b7bbe093fc>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnode_importance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdst\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medge_index\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdesc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Aggregating Attention'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mnode_importance\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mattention_scores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mnode_importance\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdst\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mattention_scores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36m__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1106\u001b[0m         \u001b[0;31m# NB: We have intentionally skipped __torch_function__ dispatch here.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1107\u001b[0m         \u001b[0;31m# See gh-54457\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1108\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1109\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"iteration over a 0-d tensor\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1110\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_tracing_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ]
     }
