--- a/network/GAT.ipynb
+++ b/network/GAT.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vpOAKz7sbTYI",
-        "outputId": "d2894077-ec92-49b0-dfb5-8a544b02abd3"
+        "outputId": "5d971eca-c2da-49cd-f93e-c6807d221865"
       },
       "outputs": [
         {
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "3tQw5eRHbYIb"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,9 +87,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ewx-H4rXb0aJ",
-        "outputId": "c49dcc55-57dc-4e61-bb37-5ffcd0ffc6ed"
+        "outputId": "8f76db8d-6dae-4806-fd6a-17b1e5530e61"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,9 +121,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rP8UACQutVm_",
-        "outputId": "23b07e3f-3efd-47ee-e50f-9b10e54fa42d"
+        "outputId": "660c16e5-891a-4424-9c97-ee85b4a9af69"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "aDqzgT2hwN9v"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -174,7 +174,7 @@
       "metadata": {
         "id": "aGjIsmT7dZdu"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -190,9 +190,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_9G2kK9PeqhZ",
-        "outputId": "18f405ab-5d18-43b8-ddb1-f423614ccce1"
+        "outputId": "8fdf30f1-4894-49b3-b8f1-70a9acfdb8d6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -218,9 +218,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W6r-GR4ie3Me",
-        "outputId": "37cd09f3-f822-4887-a39f-e973634890d8"
+        "outputId": "2547e7c9-d4d3-4354-8552-02ab61e4b3db"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -246,9 +246,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "epK-wXocvqnB",
-        "outputId": "aec9beca-e4d6-4587-d130-6a27bae3b422"
+        "outputId": "a4d0fb98-ce40-4d1e-8ba9-3456ad046979"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -273,9 +273,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "15be5e47-420b-4ceb-88fd-13e016c5ff95"
+        "outputId": "c624d194-f9f2-477b-c249-b7b269ac1af5"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -294,25 +294,26 @@
       "source": [
         "# architecture\n",
         "class GAT(torch.nn.Module):\n",
-        "    def __init__(self, in_channels, out_channels, heads=1):\n",
+        "    def __init__(self, in_channels, out_channels, layer_size = 128, heads=1):\n",
         "        super(GAT, self).__init__()\n",
-        "        self.gat = GATConv(in_channels, out_channels, heads=heads, concat=False)\n",
-        "\n",
+        "        self.gat1 = GATConv(in_channels, layer_size, heads=heads, concat=False)\n",
+        "        self.gat2 = GATConv(layer_size, out_channels, heads=heads, concat=False)\n",
         "\n",
         "    def forward(self, x, edge_index, edge_attr):\n",
-        "        x, attention_weights = self.gat(x, edge_index, return_attention_weights=True)\n",
+        "        x = self.gat1(x, edge_index)\n",
+        "        x, attention_weights = self.gat2(x, edge_index, return_attention_weights=True)\n",
         "        return x, attention_weights"
       ],
       "metadata": {
         "id": "gKpCeubfe-hg"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model  = GAT(in_channels=node_features.shape[1], out_channels=2)\n",
+        "model  = GAT(in_channels=node_features.shape[1], out_channels=1)\n",
         "model"
       ],
       "metadata": {
@@ -320,16 +321,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e50569d3-1db4-4fd8-a79f-6f7ac15fc24f"
+        "outputId": "66faeb0d-63a6-4f48-8c19-cd0887765cb0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "GAT(\n",
-              "  (gat): GATConv(12, 2, heads=1)\n",
+              "  (gat1): GATConv(12, 128, heads=1)\n",
+              "  (gat2): GATConv(128, 1, heads=1)\n",
               ")"
             ]
           },
@@ -361,28 +363,37 @@
       "metadata": {
         "id": "1Kf5wWEKDLV3"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "attention_weights = train_model(model, epochs = 10)"
+        "attention_weights = train_model(model)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fUwfo8Kicuoq",
-        "outputId": "f90d1068-657b-467f-c3bf-db630d8117f5"
+        "outputId": "3e347448-eba3-415f-c7a8-c2cba61aaf78"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1, Loss: 0.4484439194202423\n"
+            "Epoch 1, Loss: 0.4484439492225647\n",
+            "Epoch 11, Loss: 0.4484439194202423\n",
+            "Epoch 21, Loss: 0.4484439194202423\n",
+            "Epoch 31, Loss: 0.4484439194202423\n",
+            "Epoch 41, Loss: 0.4484439194202423\n",
+            "Epoch 51, Loss: 0.4484439194202423\n",
+            "Epoch 61, Loss: 0.4484439194202423\n",
+            "Epoch 71, Loss: 0.4484439194202423\n",
+            "Epoch 81, Loss: 0.4484439194202423\n",
+            "Epoch 91, Loss: 0.4484439194202423\n"
           ]
         }
       ]
@@ -397,9 +408,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_viHapdgzDZ8",
-        "outputId": "7ebeed69-6f79-44dc-8f1d-a93e36e7668f"
+        "outputId": "26f6e784-1171-483a-c22d-b747c6a2b584"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,45 +427,45 @@
     {
       "cell_type": "code",
       "source": [
-        "attention_scores = attention_weights[1]\n",
+        "attention_scores = attention_weights[1].sum(dim=-1)\n",
         "\n",
-        "node_importance = torch.zeros(len(nodes))\n",
-        "for i, (src, dst) in tqdm(enumerate(data.edge_index.t()), desc = 'Aggregating Attention'):\n",
-        "    node_importance[src] += attention_scores[i].abs().sum()\n",
-        "    node_importance[dst] += attention_scores[i].abs().sum()\n",
+        "src, dst = data.edge_index\n",
+        "node_importance = torch.zeros(len(nodes), device=attention_scores.device)\n",
         "\n",
-        "_, important_node_indices = torch.topk(node_importance, k=10)\n",
-        "\n",
-        "print(f'Most Important Nodes: {important_node_indices}')"
+        "with torch.no_grad():\n",
+        "  node_importance.scatter_add_(0, src, attention_scores)\n",
+        "  node_importance.scatter_add_(0, dst, attention_scores)"
+      ],
+      "metadata": {
+        "id": "zPMUaa5KzKH9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "top_nodes = torch.topk(node_importance, k=10).indices.tolist()\n",
+        "top_nodes"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 349
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "zPMUaa5KzKH9",
-        "outputId": "fbfd5907-a723-4c2c-fae9-d3a6a996a025"
+        "id": "NafIdmfVajx8",
+        "outputId": "2b9d169d-96c5-4867-d1b4-349f996dc0c5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Aggregating Attention: 749847it [01:44, 7172.68it/s]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-e0b7bbe093fc>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mnode_importance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdst\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medge_index\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdesc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Aggregating Attention'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mnode_importance\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mattention_scores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mnode_importance\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdst\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mattention_scores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36m__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1106\u001b[0m         \u001b[0;31m# NB: We have intentionally skipped __torch_function__ dispatch here.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1107\u001b[0m         \u001b[0;31m# See gh-54457\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1108\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1109\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"iteration over a 0-d tensor\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1110\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_tracing_state\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[353527, 549576, 265236, 66655, 479813, 326906, 325813, 226295, 60311, 636187]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
         }
       ]
     }
