--- a/network/network_analysis.ipynb
+++ b/network/network_analysis.ipynb
@@ -93,6 +93,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "id": "04145728",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1.8171614879550778e-06"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "nx.density(G)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 4,
       "id": "0g3kvSwbftRN",
       "metadata": {
